# EtherView

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
etherview/: __init__.py  plot.py  type.py
test/: test_package.py
